# step

./: .gitignore  README.md
src/: 00README.txt  Makefile-common  Makefile-step  Makefile.in  configure  configure.ac
src/ChannelKB/: Makefile  README.txt  TODO.txt  db.lisp  defsys.lisp  handlers.lisp  loader.lisp  messages.lisp  test.lisp
src/Comm/: Makefile  TODO.txt  comm.lisp  defsys.lisp  interface.lisp  internal.lisp  misc.lisp  socket.lisp  stdio.lisp  test.lisp  testa.lisp  testb.lisp  tracing.lisp
src/Diesel/: .cvsignore  Makefile
src/DiscourseContext/: DialogManager.lisp  Makefile  dc.lisp  defsys.lisp  handlers.lisp  history.lisp  lex.lisp  loader.lisp  messages.lisp  overhead.lisp  refKB.lisp  reference.lisp  test.lisp
src/Docs/: README-step.txt  README-windows.txt  building-trips.html  cvs.html  index.html  making-videos.html  new-module.html  running-trips.html  style.css  trips-devel.html  troubleshooting.html
src/Domiknows/: .cvsignore  Makefile  README  add-types-to-scene.lisp  defsys.lisp  domiknows.lisp  gqa-json2lisp.pl  graph.lisp  http.lisp  json.lisp  lf-munging.lisp  lf-rdf-to-lisp.xsl  lf-to-query-graph.lisp  match.lisp  messages.lisp  parse-and-wait.lisp  question.lisp  reformat-lisp-sgs.pl  retype-sgs.lisp
src/Facilitator/: .cvsignore  ClientGroup.java  ColumnLayout.java  Debug.java  Facilitator.java  Facilitator.mcp  FacilitatorDisplay.java  FlashLED.java  LED.java  Launcher.java  LauncherException.java  Log.java  Makefile  ModemDisplay.java  NullDisplay.java  Orientation.java  ProcessClient.java  README-MCP.txt  Registry.java  Sendable.java  SocketClient.java  StatusViewer.java  StderrReader.java  StdinClient.java  Subscription.java  SubscriptionManager.java  SubscriptionPattern.java  TODO.txt  TODO2.txt  TTYDisplay.java  Test.java  TrafficViewer.java  extract-msgs.pl  facilitator.man  test-input.txt
src/Graphviz/: .cvsignore  Configuration.pm.in  Errors.pm  Escape.pm  Graphviz.pl  Makefile  README  WindowManager.pm  dot-to-terms.lisp  fix-alignment-graffle.rb  get-quick-look-preview.rb  graffle-to-dot.rb  graffle-to-terms.sh  moebius-to-dot.pl  preview-graffle.sh
src/KQML/: .cvsignore  KQML.c  KQML.h  KQML.mcp  KQML.pm  KQML.pm.man  KQMLBadCharacterException.java  KQMLBadCloseException.java  KQMLBadCommaException.java  KQMLBadHashException.java  KQMLBadOpenException.java  KQMLBadPerformativeException.java  KQMLContinuation.java  KQMLDispatcher.java  KQMLException.java  KQMLExpectedListException.java  KQMLExpectedWhitespaceException.java  KQMLList.java  KQMLObject.java  KQMLPerformative.java  KQMLQuotation.java  KQMLReader.java  KQMLReceiver.java  KQMLStream.h  KQMLStream.m  KQMLString.java  KQMLToken.java  KQML_error.c  KQML_misc.c  KQML_parse.c  KQML_read.c  KQML_timestamp.h  Lisp.pm  Makefile  Makefile-c  Makefile-java  Makefile-javascript  Makefile-objc  Makefile-perl  Makefile-python  (+19 more)
src/LFEvaluator/: Makefile  binding.lisp  defsys.lisp  dispatch-functions.lisp  edge.lisp  evaluate.lisp  evaluation-test.lisp  handlers.lisp  hypothesis.lisp  lf-node.lisp  lf-serialization-test.lisp  lf-to-rdf.lisp  lfevaluator.lisp  node.lisp  priority.lisp  start-edge.lisp  start-node.lisp  util.lisp
src/LexiconManager/: Makefile  defsys.lisp  hierarchy-functions.lisp  lxm-pkg.lisp  lxm.lisp  messages.lisp  scenario.lisp  w-pkg.lisp
src/Logging/: Makefile  defsys.lisp  logging.lisp
src/NewIM/: DialogStateManager.lisp  IM-Managers.lisp  IMrules.lisp  KBreference.lisp  LFstore.lisp  Makefile  Manager.lisp  MatchEngine.lisp  README.txt  SpeechActAnalysis.lisp  channel-manager.lisp  defsys.lisp  doc  extract.lisp  im.lisp  messages.lisp  reference.lisp  structures.lisp  temporal-relation.lisp  test.lisp  visual-reference.lisp  warn.lisp
src/OntologyManager/: Makefile  defsys.lisp  f-pkg.lisp  macros.lisp  messages.lisp  om-pkg.lisp  om.lisp  ont-pkg.lisp  tests.lisp
src/Parser/: Makefile  Makefile.medical  Manager.lisp  MatchEngine.lisp  README  annToolImage.sh  cardiac.lisp  defsys.lisp  defsysWithLauncher.lisp  frag-parser.lisp  im.lisp  incremental_Parsing_README.txt  monroe-dialogs-load.lisp  parser-medadvisor-kr.lisp  parser-pkg.lisp  parser-trains-basic.lisp  parser-trains-kr.lisp  parser.lisp  utils.lisp
src/RDFMatcher/: Makefile  RDFMatcher.java  README.txt
src/SimpleKB/: Makefile  api.lisp  auxfns.lisp  builtins.lisp  defsys.lisp  loader.lisp  patmatch.lisp  prolog.lisp  test.lisp  unify.lisp
src/SkeletonScore/: .cvsignore  Makefile  SkeletonScore.py  SkeletonScore.scala
src/Systems/: Makefile  Makefile-common
src/TextPP/: .cvsignore  Makefile  TextPP.pl
src/TextTagger/: .cvsignore  CoreNLP-to-TextTagger.xsl  Makefile  TODO  TextTagger.pl  alternate-spellings.mk  corenlp.mk  countries.mk  get-countries-tsv.pl  get-personal-names.sh  get-wn-multiwords.pl  make-terms-dot-txt.sh  personal-names.mk  terms-c.mk  terms-txt.mk  terms.c  text-to-lattice-test.pl  wn-multiwords.mk
src/Tools/: .cvsignore  Makefile  trips_cat.c  trips_cat.man  trips_client.c  trips_client.man  trips_exec.c  trips_exec.man  trips_msg.c  trips_msg.man
src/TripsModule/: GUITripsModule.java  Makefile  Makefile-java  Makefile-javascript  Makefile-perl  Makefile-python  Makefile-ruby  README.txt  RunnableWithExceptions.java  Sendable.java  StandardTripsModule.java  TODO.txt  TripsConnection.java  TripsModule.java  TripsModule.mcp  TripsModule.pm  __init__.py  stream-pair.js  trips-module.js  trips_module.py  trips_module.rb
src/WordFinder/: Makefile  README.txt  TODO.txt  defsys.lisp  lookup.lisp  messages.lisp  overhead.lisp  test.lisp  wordfinder.lisp
src/WordNetSQL/: .cvsignore  Makefile  README.html  eswn-pointer-inverses.psv  eswn-pointer-symbols.psv  eswn.sqlite  fix-glosstag-offsets-again.pl  fix-glosstag-offsets-manually.pl  fix-glosstag-offsets.pl  get-del-ins.ph  glosstag-standoff-to-psv.xsl  glosstag-standoff-to-sql.pl  glosstag-standoff-to-sql.xsl  glosstags.sqlite  make-wordnet-sql-db.pl  manual-glosstag-fixes.txt  sense-map-to-psv.pl  sense-map.sqlite  standardize-eswn-glosses.pl  word_net_sql.polyglot
src/bioagents_trips/: LICENSE  (+10 more)
(+8053 files in other folders)
